# simplesearch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.py
include/invind/: field.hpp  indexer.hpp  query.hpp  sorted_vector.hpp
include/simplesearch/: field.hpp  indexer.hpp  sorted_vector.hpp
src/: field.cpp  indexer.cpp  query.cpp  wrapper.cpp
tests/: test.py  test_indexer.cpp  test_numerical.cpp  test_sorted_vector.cpp
